UPDATE Sign Up Form

--- a/signup.html
+++ b/signup.html
@@ -26,7 +26,7 @@
                             </label>
                         </td>
                         <td>
-                            <select name="" id="">
+                            <select>
                                 <option hidden> ‎ ‎ ‎ ‎  --Choose a City--‎ ‎ ‎ </option>
                                 <option>Cairo</option>
                                 <option>Alexandria</option>
