UPDATE signup form

--- a/signup.html
+++ b/signup.html
@@ -20,8 +20,19 @@
                     <tr>
                         <td>Email:</td>
                         <td><input type="email" required placeholder="email@server.domain"></td>
-                        <td>Confirm Email:</td>
-                        <td><input type="email" required></td>
+                        <td>
+                            <label for="">
+                                City:
+                            </label>
+                        </td>
+                        <td>
+                            <select>
+                                <option hidden> ‎ ‎ ‎ ‎  --Choose a City--‎ ‎ ‎ </option>
+                                <option>Cairo</option>
+                                <option>Alexandria</option>
+                                <option>Giza</option>
+                            </select>
+                        </td>
                     </tr>
                     <tr>
                         <td>Password:</td>
