added borrow button

--- a/User Section/book_details.html
+++ b/User Section/book_details.html
@@ -6,9 +6,7 @@
     <style>
         nav {
             display: flex;
-
             align-items: center;
-            /* Aligns items along the cross axis */
         }
 
         .nav-list {
@@ -58,6 +56,10 @@
             hic dolorem! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic nobis impedit dolores atque
             aliquid, numquam eveniet. Quis explicabo ad laboriosam. Quis quia deleniti blanditiis qui eius libero neque
             sunt corrupti!</p>
+        <div>
+            <button>Borrow</button>
+            <small>available stock: 7</small>
+        </div>
     </section>
 </body>
 
