--- a/User Section/Home.html
+++ b/User Section/Home.html
@@ -18,8 +18,8 @@
         </center>
         <div>   
             <ul>
-                <li><a href="view_borrowed_books.html"><big>View Borrowed Books</big></a></li>
-                <li><a href="view_available_books.html"><big>View Available Books</big></a></li>
+                <li><a href="borrowed-books.html"><big>View Borrowed Books</big></a></li>
+                <li><a href="../available-books.html"><big>View Available Books</big></a></li>
             </ul>
         </div>
 
