--- a/User Section/book_details.html
+++ b/User Section/book_details.html
@@ -40,7 +40,7 @@
         <nav>
             <h1><a href="">ReadIt</a></h1>
             <ul class="nav-list">
-                <li><a href="">View books</a></li>
+                <li><a href="../available-books.html">View books</a></li>
                 <li><a href="">About</a></li>
             </ul>
         </nav>
