--- a/User Section/borrowed-books.html
+++ b/User Section/borrowed-books.html
@@ -50,7 +50,7 @@
             <p><b><i>
                 Ready for an exciting reading adventure? Dive into our selection of captivating books available for borrowing. Explore more titles and start your next journey!
             </i></b></p>
-            <a href="">View More Books Now</a>
+            <a href="../available-books.html">View More Books Now</a>
         </center>
     </body>
 </html>
