--- a/Admin Section/admin-dashboard.html
+++ b/Admin Section/admin-dashboard.html
@@ -11,10 +11,10 @@
         <header>
             <nav>
                 <ul>
-                    <li><a href="#Readit">Readit</a></li>
+                    <li><a href="../User Section/Home.html">Readit</a></li>
                     <li><a href="#MyProfile">My Profile</a></li>
-                    <li><a href="Page 5 (add books).html" target="_blank">Add New Book</a></li>
-                    <li><a href="#View Books">View Books</a></li>
+                    <li><a href="add-books.html">Add New Book</a></li>
+                    <li><a href="../available-books.html">View Books</a></li>
                 </ul>
             </nav>
             <hr>
