--- a/Admin Section/book_manager.html
+++ b/Admin Section/book_manager.html
@@ -72,8 +72,8 @@
     <nav>
         <h1>ReadIt</h1>
         <ul class="nav-list">
-            <li><a href="">Home</a></li>
-            <li><a href="">View books</a></li>
+            <li><a href="../User Section/Home.html">Home</a></li>
+            <li><a href="../available-books.html">View books</a></li>
         </ul>
     </nav>
     <div class="container">
