--- a/Admin Section/book_manager.html
+++ b/Admin Section/book_manager.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>ReadIt</title>
+    <title>Readit - Book Details</title>
     <style>
         body {
             margin: 0;
@@ -24,7 +24,7 @@
         }
 
         .nav-list li {
-            padding: 10px
+            padding: 0 10px
         }
 
 
@@ -73,6 +73,7 @@
         <h1>ReadIt</h1>
         <ul class="nav-list">
             <li><a href="../User Section/Home.html">Home</a></li>
+            <li><a href="../Admin Section/admin-dashboard.html">Dashboard</a></li>
             <li><a href="../available-books.html">View books</a></li>
         </ul>
     </nav>
